--- a/Animation-Game/style.css
+++ b/Animation-Game/style.css
@@ -16,11 +16,13 @@
   bottom: 5%;
   height: 30%;
   left: 20px;
+}
+#charactor:hover {
   animation-name: roll;
   animation-duration: 5s;
   animation-timing-function: ease-in-out;
-  animation-iteration-count: unset;
-  animation-delay: 0.3s;
+  animation-iteration-count: infinite;
+  animation-delay: 0.01s;
 }
 
 @keyframes roll {
