--- a/Animation-Game/style.css
+++ b/Animation-Game/style.css
@@ -14,25 +14,6 @@
 #charactor {
   position: absolute;
   bottom: 5%;
-  height: 30%;
+  height: 350px;
   left: 20px;
-}
-#charactor:hover {
-  animation-name: roll;
-  animation-duration: 5s;
-  animation-timing-function: ease-in-out;
-  animation-iteration-count: infinite;
-  animation-delay: 0.01s;
-}
-
-@keyframes roll {
-  0% {
-    transform: translateX(10px);
-  }
-  20% {
-    transform: translateX(10px);
-  }
-  100% {
-    transform: translateX(1000px);
-  }
 }
