--- a/Animation-Game/style.css
+++ b/Animation-Game/style.css
@@ -39,8 +39,16 @@
 #posterContainer {
   /* display: none; */
   width: 100%;
+  position: relative;
 }
 
-#posterContainer:first-child img{
+#posterContainer > img {
   width: 60%;
+  margin: 0 auto;
+  position: absolute;
+  z-index: 2;
+}
+
+#figter > img {
+  position: absolute;
 }
