--- a/Animation-Game/style.css
+++ b/Animation-Game/style.css
@@ -5,7 +5,7 @@
 * {
   padding: 0;
   margin: 0;
-  /* overflow: hidden; */
+  overflow: hidden;
   font-family: "DragonHunter";
 }
 .container {
@@ -36,9 +36,10 @@
   text-align: center;
   color: #fe6a03;
 }
-#posterContainer {
+#poster {
   display: none;
   width: 100%;
-  position: relative;
-}
+  position: absolute;
+  z-index: 33;
 
+}
